--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Websocket server for a basic game",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/jamesnowecki/tictactoe-server#readme",
   "dependencies": {
+    "uuid": "^8.3.2",
     "websocket": "^1.0.33"
   }
 }
