--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Websocket server for a basic game",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js" 
   },
   "repository": {
     "type": "git",
